# planning

./: -home-next-ros_workspace-routing_planning-ros-src-pathload-src-.txt  .gitignore  AStar.h  AsatrMy (3rd copy).cpp  AsatrMy (4th copy).cpp  AsatrMy (another copy).cpp  AsatrMy (copy).cpp  AsatrMy.cpp  BezierCruve.cpp  README.md  bc  bezier.cpp  import osqp.py  main.cpp  mapPoints.txt  mapPointsShow.txt  mapclose.cpp  mapload  my  puresuit.py
Notes/CppAD_Ipopt/: CMakeLists.txt  example.cpp
Notes/Dynamic_Programming/: CMakeLists.txt  dp.cpp
Notes/GoogleTest/demo2/: CMakeLists.txt  main.cpp
Notes/Ipopt_test/: CMakeLists.txt  README.md  ipopt_interface.cpp  ipopt_interface.hpp  main.cpp
Notes/c++_test/: A.cpp  A.h  CMakeLists.txt  angle.cpp  function.cpp  kd-tree.cpp  lambda.cpp  main.cpp  osqp_test.cpp  sin_cos_table.h  test.cpp  test1.cpp  test2.cpp  test3.cpp  test5.cpp  test6.cpp  test7.cpp  tree.cpp  widget.cpp
Notes/c++_test/clothoid/: CMakeLists.txt  clothoid_curve.cpp  clothoid_curve.h
Notes/c++_test/test/: CMakeLists.txt  osqp_test.cpp
Notes/c++_test/test2/: CMakeLists.txt  Data.cpp  Data.h  main.cpp  test2.cpp  test2.h
Notes/cmake_test_file/: CMakeLists.txt  License.txt  config.h  config.h.in  pc_complies.sh
Notes/cmake_test_file/include/: Gun.hpp  solider.hpp
Notes/cmake_test_file/math/: CMakeLists.txt  myMath_test.cpp
Notes/cmake_test_file/src/: Gun.cpp  main.cpp  solider.cpp
Notes/osqp_eigen/: CMakeLists.txt
Notes/osqp_eigen/ReferenceLine/: curve.h  curve_creator.cpp
Notes/osqp_eigen/data/: path_points.csv
Notes/osqp_eigen/include/: PathOptimize.hpp  cartesianFrenet.hpp  circle.hpp  csc_matrix_osqp.hpp  frenet_path_double.h  kd_tree.hpp  matplotlibcpp.h  mySpline_2d.hpp  pathOptimize.hpp  piecewise_jerk_path_optimizer.h  quinticPolynomial.hpp  vehicleConfig.hpp
Notes/osqp_eigen/kdtree/: cartesianFrenet.hpp
Notes/osqp_eigen/src/: MPCExample.cpp  PathOptimize.cpp  apollo_osqp.cpp  cartesianFrenet.cpp  cartesianFrenet_kdtree.cpp  cartesianFrenet_local_optimum.cpp  cartesianFrenet_test.cpp  cartesianFrenet_test1.cpp  circle.cpp  csc_matrix_osqp.cpp  discretized_points_smoothing_main.cpp  kd-tree-1  kd-tree-1.cpp  kd-tree_test.cpp  kd_tree_test1.cpp  lineInterpoltion.cpp  mySpline_2d.cpp  pathDemo.cpp  pathOptimize_main.cpp  piecewise_jerk_path_optimizer.cc  piecewise_jerk_path_optimizer_old.cc  qp_Spline_2d_main.cpp  quinticPolynomial.cpp  quintic_curve.cpp  reeds_shepp_main.cpp  spiral_smoother_main.cpp  splineInterpoltion.cpp  tempCodeRunnerFile.cpp
ReferenceLine/: CMakeLists.txt  curve.cpp  curve_creator.h  curve_segment.h  main.cpp
ReferenceLine (copy)/: CMakeLists.txt  curve.cpp  curve.h  curve_creator.cpp  curve_creator.h  curve_segment.cpp  curve_segment.h  main.cpp
ReferenceLine (copy)/OpEn_solve/: Cargo.toml
ReferenceLine (copy)/OpEn_solve/src/: lib.rs
ReferenceLine (copy)/Quintic_Curve/: CMakeLists.txt
ReferenceLine (copy)/Quintic_Curve/include/: cpprobotics_types_double.h  frenet_path_double.h  quinticPolynomial.hpp
ReferenceLine (copy)/Quintic_Curve/src/: quinticPolynomial.cpp
ReferenceLine _another_copy/: CMakeLists.txt  curve.h  curve_creator.cpp  curve_creator.h  curve_segment.cpp  curve_segment.h  interpolation.py  main.cpp  pc_cmake.sh
dubins-Curves/: CMakeLists.txt  main.cpp
hybrid_A*/dubin-RS-curve-in-ros--Car-Like-Robots-master/: CMakeLists.txt
hybrid_A*/dubin-RS-curve-in-ros--Car-Like-Robots-master/scripts/: plot_states.py  plot_statistics.py
hybrid_A*/dubin-RS-curve-in-ros--Car-Like-Robots-master/src/: cc_rs_main.cpp
hybrid_A*/dubin-RS-curve-in-ros--Car-Like-Robots-master/test/: hc_cc_circle_test.cpp  timing_test.cpp
lane_line_construction/: .clang-format  CMakeLists.txt  Lane.h  LaneConfig.h  LaneLineConstruction.cpp  LaneLineConstruction.h  bezier.cpp  bezier.h  collision.cpp  collision.h  lane_config.h  lane_line_construction.cpp  lane_line_construction.h  main.cpp  purepursuit.cpp  roundabouts.ggb  simulation.h  trajectory_planning.cpp  trajectory_planning.h  vis.h
lane_line_construction/Carla_OpenDrive/: CMakeLists.txt  OpenDrive.cpp  OpenDrive.h  README.md  main.cpp  test_opendrive.cpp
lane_line_construction/Carla_OpenDrive/map/: AutonomouStuff.xodr  CampusUAH_v1_7.xodr  Campus_v1.xodr  CubeTown.xodr  Curve1LaneSame.xodr  Curve2LaneOpposing.xodr  GoMentum.xodr  IndianapolisMotorSpeedway.xodr  PurdueGrandPrixTrack.xodr  Shalun.xodr  complex.xodr  dlcs.xodr  intersection.xodr  parking_new.xodr
lane_line_construction/Carla_OpenDrive/opendrive/: CMakeLists.txt
lane_line_construction/Carla_OpenDrive/routing/: CMakeLists.txt  bezier.h  common.cpp  common.h  router.cpp  router.h
lane_line_construction/Carla_OpenDrive/tool/: check_code_format.sh  matplotlibcpp.h
lane_line_construction/JSON/: track.json
lane_line_construction/libOpenDRIVE/: CMakeLists.txt  README.md  main.cpp  test.cpp
lane_line_construction/libOpenDRIVE/Viewer/: CubeTown.xodr  RoadNetworkMesh.cpp  RoadNetworkMesh.h  ViewerUtils.cpp  ViewerUtils.h
lane_line_construction/libOpenDRIVE/include/: CubicBezier.hpp  Junction.h  Lane.h  LaneSection.h  Math.hpp  Mesh.h  OpenDriveMap.h  RefLine.h  Road.h  RoadMark.h  RoadObject.h  RoutingGraph.h  Utils.hpp  XmlNode.h
lane_line_construction/libOpenDRIVE/src/: Embind.cpp  Junction.cpp  Lane.cpp  LaneSection.cpp  Mesh.cpp  OpenDriveMap.cpp  RefLine.cpp  Road.cpp  RoadMark.cpp  (+2 more)
lattice/Spline/: CMakeLists.txt
lattice/littice/: CMakeLists.txt
opendrive/odrSpiral/: CMakeLists.txt  README.md
piecewise_bezier_sdf/c++_version/: .clang-format  CMakeLists.txt  bezier.cpp  bezier.h  bezier_test.cpp  bezier_to_poly.cpp  bezier_to_poly.h  findFootPoints.cpp  implicit_curve.cpp  implicit_curve.h  implicit_curve_test.cpp  lbgfs_fit_test.cpp  main.cpp  matplotlibcpp.h  piecewise_bezier_curve.cpp  piecewise_bezier_curve.h  piecewise_bezier_curve2.cpp  piecewise_bezier_curve2.h  piecewise_bezier_curve_test.cpp  r_function.cpp  r_function.h  r_function_test.cpp  second_bezier.cpp  time.cpp
学习笔记/cmake_test_file/: CMakeLists.txt
脚本/pcd/: CMakeLists.txt  pcd_conv.cpp  pcd_view.cpp
(+872 files in other folders)
